@startuml DC1
class Estudiante {
    - id: int
    - nombre: String
    - matricula: String
    - correo: String
    - contrasena: String
    + validarCredenciales(): boolean
    + seleccionarExamen(): Examen
}

class Asignatura {
    - codigo: int
    - nombre: String
    - creditos: int
    + listarExamenes(): List<Examen>
}

class Examen {
    - id: int
    - nombre: String
    - fecha: Date
    - horaInicio: Time
    - horaFin: Time
    + habilitarHorario(): void
    + validarHorario(): boolean
    + presentar(): void
}

class Horario {
    - id: int
    - horaInicio: Time
    - horaFin: Time
    + validarDisponibilidad(): boolean
}

Estudiante --> Examen : "presenta"
Estudiante --> Asignatura : "consulta"
Asignatura --> Examen : "tiene"
Examen --> Horario : "usa"
Horario --> Examen : "valida"
@enduml
